--- a/src/app/components/_dashboard/profile/profile.component.html
+++ b/src/app/components/_dashboard/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="profile">
   <div class="container">
     <div class="user-image">
-      <img [src]="user.avatar ? user.avatar : '/assets/img/user.png'">
+      <img [src]="user.avatar || '/assets/img/user.png'">
     </div>
     <div class="user-info">
       <span
