--- a/src/app/components/_nav/tabs/tabs.component.scss
+++ b/src/app/components/_nav/tabs/tabs.component.scss
@@ -44,6 +44,8 @@
     }
 
     .tab-link {
+      padding: 8px 20px;
+
       @media (min-width: $md-screen) {
         position: relative;
         display: block;
