--- a/src/app/components/_settings/settings.component.html
+++ b/src/app/components/_settings/settings.component.html
@@ -1,14 +1,21 @@
-<div class="row mt-md-4 mb-5 flex-column flex-md-row">
-  <div class="settings-menu col-12 col-md-3 pr-0 pr-md-0 pl-0 pl-md-3">
-    <h3>Settings</h3>
-    <app-tabs
-      class="settings-tabs"
-      [tabs]="tabs"
-      [flexMdColumn]="true"
-      [justifySmCenter]="true"
-      [verticalDesktop]="true"></app-tabs>
-  </div>
-  <div class="col-12 col-md-9 pr-0 pr-sm-3 pl-0 pl-sm-4">
-    <router-outlet></router-outlet>
+<div *ngIf="user.isActive; else isLoading">
+  <div class="row mt-md-4 mb-5 flex-column flex-md-row">
+    <div class="settings-menu col-12 col-md-3 pr-0 pr-md-0 pl-0 pl-md-3">
+      <h3>Settings</h3>
+      <app-tabs
+        class="settings-tabs"
+        [tabs]="tabs"
+        [flexMdColumn]="true"
+        [justifySmCenter]="true"
+        [verticalDesktop]="true"></app-tabs>
+    </div>
+    <div class="col-12 col-md-9 pr-0 pr-sm-3 pl-0 pl-sm-4">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
+<ng-template #isLoading>
+  <div class="loading-spinner">
+    <i class="fa fa-refresh"></i>
+  </div>
+</ng-template>
