--- a/src/app/styles/_colors.scss
+++ b/src/app/styles/_colors.scss
@@ -2,6 +2,8 @@ $elegant-dark-color:  #212121;
 $dark-color:          #212529;
 $special-dark-color:  #263238;
 $deep-dark-color:     #1D272C;
+$danger-color-dark:   #CC0000;
+$danger-color:        #FF4444;
 $primary-color:       #F80;
 $orange-color:        #FB3;
 $orange-lighten-2:    #FFB74D;
