--- a/src/app/components/_settings/avatar-upload/avatar-upload.component.html
+++ b/src/app/components/_settings/avatar-upload/avatar-upload.component.html
@@ -1,5 +1,5 @@
 <div class="form-group d-flex flex-column">
-  <label for="avatarUpload">Profile Picture</label>
+  <label>Profile Picture</label>
   <div class="d-flex flex-row flex-lg-column">
     <img
       [src]="avatar"
