--- a/src/app/styles/_notifications.scss
+++ b/src/app/styles/_notifications.scss
@@ -1,3 +1,6 @@
+@import 'colors';
+@import 'animation';
+
 #toast-container {
   width: 100% !important;
 
@@ -5,6 +8,27 @@
     width: 100% !important;
     border-radius: 0 !important;
     margin: 0 !important;
+    opacity: .95;
+  }
+}
+
+.offline-warning {
+  position: absolute;
+  display: flex;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 0;
+  width: 100%;
+  padding: 5px 15px;
+  color: #FFF;
+  text-align: center;
+  background-color: $danger-color;
+  opacity: 0;
+  transition: opacity $default-anim;
+
+  &.active {
+    height: auto;
     opacity: .95;
   }
 }
