--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,6 +15,7 @@
           <input required
             type="email"
             name="email"
+            id="email"
             class="form-control"
             [class.mb-4]="!formErrors.email"
             autocomplete="email"
@@ -24,6 +25,7 @@
           <input required
             type="password"
             name="password"
+            id="password"
             class="form-control"
             [class.mb-4]="!formErrors.password"
             autocomplete="current-password"
