--- a/src/app/components/_settings/settings.component.html
+++ b/src/app/components/_settings/settings.component.html
@@ -15,7 +15,7 @@
   </div>
 </div>
 <ng-template #isLoading>
-  <div class="loading-spinner">
+  <div class="loading-spinner mt-4">
     <i class="fa fa-refresh"></i>
   </div>
 </ng-template>
