add check for user.isActive property

--- a/src/app/components/_dashboard/dashboard.component.html
+++ b/src/app/components/_dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="user.isActive; else isLoading">
+<div *ngIf="user?.isActive; else isLoading">
   <div class="row mt-md-4 mb-5">
     <div class="col-12 col-md-3 pr-0 pr-md-1 pr-lg-2 pl-0">
       <app-tabs
