--- a/src/app/components/_settings/settings.component.html
+++ b/src/app/components/_settings/settings.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="user.isActive; else isLoading">
+<div *ngIf="user?.isActive; else isLoading">
   <div class="row mt-md-4 mb-5 flex-column flex-md-row">
     <div class="settings-menu col-12 col-md-3 pr-0 pr-md-0 pl-0 pl-md-3">
       <h3>Settings</h3>
