--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="pt-5 pb-5">
+<div class="page">
   <h2>Home</h2>
-  <hr class="mb-5">
+  <hr>
   <h3 class="font-weight-bold mb-3">Some Firestore Docs</h3>
   <ul>
     <li class="text" *ngFor="let item of items | async">
