--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,9 +1,1 @@
-@import '../../styles/colors';
-
-:host {
-  color: $dark-color !important;
-}
-
-ul {
-  min-height: 100px;
-}
+ul { min-height: 100px; }
