--- a/src/app/components/loading/loading.component.html
+++ b/src/app/components/loading/loading.component.html
@@ -3,7 +3,7 @@
   [class.disabled]="!(auth.isLoading | async)">
   <div class="splash">
     <div class="loading-spinner">
-      <i class="fa fa-refresh"></i>
+      <i class="fas fa-sync-alt"></i>
     </div>
   </div>
 </div>
