--- a/src/app/styles/_colors.scss
+++ b/src/app/styles/_colors.scss
@@ -6,8 +6,9 @@ $secondary-color:     #AA66CC;
 $danger-color:        #FF4444;
 $success-color:       #00C851;
 
-$grey-color:          #DDD;
+$warm-color:          #F5F7F9;
 $light-grey-color:    #FAFAFA;
+$grey-color:          #DDD;
 $mid-grey-color:      #999;
 $dark-grey-color:     #555;
 
