--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <app-header></app-header>
-<div
-  class="wrapper"
-  (click)="nav.collapseHeader()">
+<div class="wrapper" (click)="nav.collapseHeader()">
   <div class="container">
     <router-outlet></router-outlet>
   </div>
