--- a/src/app/components/_admin/admin.component.html
+++ b/src/app/components/_admin/admin.component.html
@@ -1,6 +1,6 @@
-<div class="pt-5 pb-5">
+<div class="page">
   <h2>Admin</h2>
-  <hr class="mb-5">
+  <hr>
   <router-outlet></router-outlet>
 </div>
 <!-- <div class="container p-0">
