--- a/src/app/components/_nav/header/header.component.scss
+++ b/src/app/components/_nav/header/header.component.scss
@@ -12,13 +12,14 @@ nav {
   padding: 0;
   background: linear-gradient(180deg, $purple-color, $pink-color);
   box-shadow: 0 0 3px rgba(0,0,0, .35);
-  transition: $default-anim;
+  transition: $fast-anim;
 
   &.offline { margin-top: 34px; }
 
   &.expanded {
     max-height: 1000px;
     padding-bottom: 15px;
+    transition: $default-anim;
   }
 
   .top {
@@ -41,14 +42,14 @@ nav {
   display: flex;
   height: 54px;
   margin-left: 1rem;
-  color: rgba(255,255,255, .8);
+  color: #E4D4F3;
   font-family: $font-logo;
   font-size: 1.95rem;
   line-height: 50px;
   white-space: nowrap;
   user-select: none;
   text-shadow: 0 0 3px rgba(0,0,0, .25);
-  transition: all $fast-anim, margin-left 0s;
+  transition: $fast-anim;
 
   &:after {
     position: absolute;
@@ -205,7 +206,7 @@ nav {
     &:hover { background: none !important; }
 
     &.active {
-      color: $grey-color;
+      color: rgba(255,255,255, .55);
       text-shadow: none;
     }
 
