--- a/src/app/components/loading/loading.component.scss
+++ b/src/app/components/loading/loading.component.scss
@@ -1,3 +1,5 @@
+@import '../../styles/colors';
+
 .loading {
   display: flex;
   justify-content: center;
@@ -8,14 +10,15 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: #F5F7F9;
-  transition: height 0s .25s, width 0s .25s, opacity .25s;
+  background: $warm-color;
+  transition: height 0s .25s, width 0s .25s, opacity .25s .25s;
   overflow: hidden;
 
   &.disabled {
     width: 0;
     height: 0;
     opacity: 0;
+    transition: height 0s .25s, width 0s .25s, opacity .25s;
   }
 
   .splash {
