--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,5 +1,19 @@
-<div class="pt-5 pb-5">
+<div class="page">
   <h2>Profile</h2>
-  <hr class="mb-5">
-  <h4>Profile Works!</h4>
+  <hr>
+  <h4>...</h4>
+  <!-- <div *ngIf="auth?.user | async as user">
+    <button
+      class="btn btn-sm btn-primary ml-3"
+      (click)="auth.setAdmin(true)"
+      *ngIf="!auth.isAdmin">
+      Make Admin <i class="fas fa-lock ml-1"></i>
+    </button>
+    <button
+      class="btn btn-sm btn-danger ml-3"
+      (click)="auth.setAdmin(false)"
+      *ngIf="auth.isAdmin">
+      Remove Admin <i class="fas fa-lock ml-1"></i>
+    </button>
+  </div> -->
 </div>
