--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,6 +1,6 @@
 <div class="page">
   <div *ngIf="!auth.isLoggedIn() && !(auth.isLoading | async); else isLoggedIn">
-    <h2>Login
+    <h2>Sign Up
       <button
         class="btn btn-sm btn-outline-dark"
         (click)="auth.googleLogin()">
@@ -8,7 +8,7 @@
       </button>
     </h2>
     <hr>
-    <form [formGroup]="loginForm" (ngSubmit)="login()">
+    <form [formGroup]="signupForm" (ngSubmit)="signup()">
       <label for="email">Email</label>
       <input required
         type="email"
@@ -36,22 +36,8 @@
       <button
         type="submit"
         class="btn btn-sm btn-secondary"
-        [class.disabled]="!loginForm.valid"
-        [disabled]="!loginForm.valid">Ready</button>
-      <p
-        class="reset-password"
-        *ngIf="!isPassReset">
-        Forget your password?
-        <span
-          class="text-secondary ml-2"
-          (click)="resetPassword()">Reset Password</span>
-      </p>
-      <p
-        class="reset-password success"
-        *ngIf="isPassReset">
-        Check your email to proceed
-        <i class="fas fa-thumbs-up ml-2"></i>
-      </p>
+        [class.disabled]="!signupForm.valid"
+        [disabled]="!signupForm.valid">Ready</button>
     </form>
   </div>
 
