--- a/src/app/styles/_typography.scss
+++ b/src/app/styles/_typography.scss
@@ -5,14 +5,14 @@ $font-logo: 'Lobster', cursive;
 $font-primary: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
 
-app-root { font-family: $font-primary; }
+body { font-family: $font-primary; }
 p a { text-decoration: underline; }
 b, strong { font-weight: bold; }
 * { -webkit-font-smoothing: antialiased; }
 
-
 h1, h2 {
   font-weight: 900;
+  letter-spacing: .1px;
   cursor: default;
 }
 
@@ -21,30 +21,11 @@ h2 {
   line-height: 1.5;
 
   @media (min-width: $md-screen) {
-    font-size: 2.5rem;
-    line-height: 2;
+    font-size: 2.4rem;
+    line-height: 1.75;
   }
 
   @media (min-width: $lg-screen) {
     font-size: 3rem;
-    line-height: 1.3;
-  }
-}
-
-h3.heading {
-  display: flex;
-  align-items: center;
-  min-height: 52px;
-  margin-top: 2rem;
-  margin-bottom: 1rem;
-  padding-bottom: 1rem;
-  font-size: 1.5rem;
-
-  @media (min-width: $sm-screen) {
-    font-size: 1.75rem;
-  }
-
-  @media (min-width: $md-screen) {
-    margin-top: 0;
   }
 }
