--- a/src/app/components/_nav/header/header.component.html
+++ b/src/app/components/_nav/header/header.component.html
@@ -18,15 +18,29 @@
   <div
     class="menu-container"
     [class.expanded]="nav.isHeaderMenuExpanded"
-    *ngIf="auth.user | async as user; else isStatic">
+    *ngIf="auth.user | async as user; else isStatic"
+    (click)="nav.collapseHeader()">
     <ul
       class="menu logged-in"
       [class.expanded]="nav.isHeaderMenuExpanded || nav.isHeaderAccountMenuExpanded">
       <li class="menu-item">
         <a
-          class="menu-link"
-          href="https://github.com/jrodl3r/ng-fire-universal">
-          <i class="fab fa-github mr-2"></i> GitHub
+          class="menu-link store-link"
+          routerLink="/store"
+          routerLinkActive="active">
+          <i class="fas fa-store mr-2"></i> Store
+        </a>
+      </li>
+      <li class="menu-item">
+        <a
+          class="menu-link cart-link"
+          routerLink="/cart"
+          routerLinkActive="active">
+          <i class="fas fa-shopping-cart mr-2">
+            <span>0</span>
+          </i>
+          <span>My&nbsp;</span>Cart
+          <span class="count">&nbsp;(0)</span>
         </a>
       </li>
       <li
@@ -39,7 +53,11 @@
           <span class="avatar">
             <img
               [class.inactive]="!user.active"
-              [src]="user.photoURL || '/assets/img/user.png'">
+              [class.disabled]="!user.photoURL"
+              [src]="user.photoURL">
+            <i
+              class="fas fa-user"
+              *ngIf="user.active && !user.photoURL"></i>
           </span>
         </div>
         <div
@@ -48,13 +66,11 @@
           <a
             class="dropdown-item"
             routerLink="/me"
-            routerLinkActive="active"
-            (click)="nav.collapseHeader()">My Account</a>
+            routerLinkActive="active">My Account</a>
           <a
             class="dropdown-item"
             routerLink="/admin"
             routerLinkActive="active"
-            (click)="nav.collapseHeader()"
             *ngIf="auth.isAdmin">Admin</a>
           <div class="dropdown-divider"></div>
           <a
@@ -71,21 +87,33 @@
     <ul
       class="menu"
       [class.expanded]="nav.isHeaderMenuExpanded || nav.isHeaderAccountMenuExpanded"
+      (click)="nav.collapseHeader()"
       *ngIf="!(auth.isLoading | async)">
       <li class="menu-item">
         <a
-          class="menu-link"
-          href="https://github.com/jrodl3r/ng-fire-universal"
-          (click)="nav.collapseHeader()">
-          <i class="fab fa-github mr-2"></i> GitHub
+          class="menu-link store-link"
+          routerLink="/store"
+          routerLinkActive="active">
+          <i class="fas fa-store mr-2"></i> Store
+        </a>
+      </li>
+      <li class="menu-item">
+        <a
+          class="menu-link cart-link"
+          routerLink="/cart"
+          routerLinkActive="active">
+          <i class="fas fa-shopping-cart mr-2">
+            <span>0</span>
+          </i>
+          <span>My&nbsp;</span>Cart
+          <span class="count">&nbsp;(0)</span>
         </a>
       </li>
       <li class="menu-item">
         <a
           class="menu-link"
           routerLink="/signup"
-          routerLinkActive="active"
-          (click)="nav.collapseHeader()">
+          routerLinkActive="active">
           <i class="fas fa-fire mr-2"></i> Sign Up
         </a>
       </li>
@@ -93,8 +121,7 @@
         <a
           class="menu-link"
           routerLink="/login"
-          routerLinkActive="active"
-          (click)="nav.collapseHeader()">
+          routerLinkActive="active">
           <i class="fas fa-sign-in-alt mr-2"></i> Login
         </a>
       </li>
