--- a/src/app/components/_nav/header/header.component.scss
+++ b/src/app/components/_nav/header/header.component.scss
@@ -29,7 +29,7 @@ nav {
     width: 100%;
   }
 
-  @media (min-width: $sm-screen) {
+  @media (min-width: $md-screen) {
     flex-direction: row;
 
     &.expanded { padding-bottom: 0; }
@@ -49,7 +49,7 @@ nav {
   white-space: nowrap;
   user-select: none;
   text-shadow: 0 0 3px rgba(0,0,0, .25);
-  transition: $fast-anim;
+  transition: 0s;
 
   &:after {
     position: absolute;
@@ -73,7 +73,7 @@ nav {
     &:after { justify-content: center; }
   }
 
-  @media (min-width: $sm-screen) {
+  @media (min-width: $md-screen) {
     margin-left: 1.25rem;
   }
 }
@@ -86,7 +86,7 @@ nav {
     width: 100%;
   }
 
-  @media (min-width: $sm-screen) {
+  @media (min-width: $md-screen) {
     display: flex;
     width: auto;
     margin-left: auto;
@@ -120,7 +120,7 @@ nav {
       position: static;
     }
 
-    @media (min-width: $sm-screen) {
+    @media (min-width: $md-screen) {
       flex-direction: row;
       max-height: 54px;
       width: auto;
@@ -133,7 +133,7 @@ nav {
     }
   }
 
-  @media (min-width: $sm-screen) {
+  @media (min-width: $md-screen) {
     display: flex;
     max-height: 54px;
     width: auto;
@@ -158,7 +158,7 @@ nav {
   &:hover { opacity: .75; }
   &.active { opacity: .5; }
 
-  @media (min-width: $sm-screen) {
+  @media (min-width: $md-screen) {
     display: none;
   }
 }
@@ -194,9 +194,40 @@ nav {
     text-shadow: 0 0 2px rgba(0,0,0, .25);
   }
 
+  &.store-link i { font-size: 18px; }
+
+  &.cart-link {
+    i {
+      position: relative;
+      font-size: 20px;
+
+      span {
+        position: absolute;
+        z-index: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        top: 0;
+        left: 0;
+        height: 15px;
+        width: 27px;
+        color: $purple-color;
+        font-size: 8px;
+        font-family: $font-primary;
+        font-weight: bold;
+      }
+    }
+
+    .count { opacity: .6; }
+
+    @media (min-width: $md-screen) {
+      span { display: none; }
+    }
+  }
+
   i { display: none; }
 
-  @media (min-width: $sm-screen) {
+  @media (min-width: $md-screen) {
     height: 100%;
     width: auto;
     margin-top: 0;
@@ -253,17 +284,21 @@ nav {
     top: 46px;
     right: 1rem;
     left: auto;
-    padding: .35rem 0;
+    padding: 0;
   }
 
-  @media (min-width: $sm-screen) {
+  @media (min-width: $md-screen) {
     position: absolute;
     background: #FFF;
     border: 1px solid rgba(27,31,35, .15);
     border-radius: 4px;
     box-shadow: 0 3px 12px rgba(27,31,35, .15);
 
-    &.expanded { position: absolute !important; }
+    &.expanded {
+      position: absolute !important;
+      padding: .35rem 0;
+    }
+
     &:not(.expanded) { display: none; }
   }
 }
@@ -275,7 +310,7 @@ nav {
   overflow: hidden;
   border-top: 1px solid rgba(255,255,255, .1);
 
-  @media (min-width: $sm-screen) {
+  @media (min-width: $md-screen) {
     width: 87%;
     margin: .25rem auto;
     border-top: 1px solid rgba(0,0,0, .025);
@@ -309,7 +344,7 @@ nav {
     pointer-events: none;
   }
 
-  @media (min-width: $sm-screen) {
+  @media (min-width: $md-screen) {
     justify-content: initial;
     padding: 8px 10px 8px 15px;
     color: $mid-grey-color;
@@ -352,6 +387,16 @@ nav {
     overflow: hidden;
 
     &.inactive { opacity: 0; }
+    &.disabled { display: none; }
+  }
+
+  i {
+    position: absolute;
+    top: 5px;
+    left: 4px;
+    color: #FFF;
+    font-size: 31px;
+    opacity: .75;
   }
 }
 
