--- a/src/app/styles/_notifications.scss
+++ b/src/app/styles/_notifications.scss
@@ -1,19 +1,30 @@
+@import 'breakpoints';
 @import 'colors';
 @import 'animation';
 
 #toast-container {
-  width: 100% !important;
-  animation: fade .5s linear;
+  display: flex;
+  justify-content: center;
+  width: 100%;
 
   & > div {
-    width: 100% !important;
-    border-radius: 0 !important;
-    margin: 0 !important;
+    width: 100%;
+    max-width: 700px;
+    margin: 0;
+    font-size: 15px;
+    border-radius: 0;
+    box-shadow: 0 0 1px rgba(0,0,0, .1), 0 2px 4px rgba(0,0,0, .2);
     opacity: .95;
-  }
-}
 
-@keyframes fade {
-  from { opacity: 0; }
-  to { opacity: 1; }
+    .toast-progress { background-color: #FFF; }
+  }
+
+  @media (min-width: $sm-screen) {
+    padding: 12px;
+
+    & > div {
+      font-size: 14px;
+      border-radius: 3px;
+    }
+  }
 }
