setup core module structure

--- a/src/app/components/_nav/header/header.component.html
+++ b/src/app/components/_nav/header/header.component.html
@@ -54,7 +54,7 @@
             <img
               [class.inactive]="!user.active"
               [class.disabled]="!user.photoURL"
-              [src]="user.photoURL">
+              [src]="user.photoURL || ''">
             <i
               class="fas fa-user"
               *ngIf="user.active && !user.photoURL"></i>
