--- a/src/app/components/_admin/users/users.component.html
+++ b/src/app/components/_admin/users/users.component.html
@@ -1,1 +1,18 @@
-<p>users works!</p>
+<p class="d-flex align-items-center p-3 pl-md-5">
+  <span class="badge bg-primary mr-3">TODO</span>
+  Setup Users
+</p>
+<!-- <div *ngIf="auth?.user | async as user">
+  <button
+    class="btn btn-sm btn-primary ml-3"
+    (click)="auth.setAdmin(true)"
+    *ngIf="!auth.isAdmin">
+    Make Admin <i class="fas fa-lock ml-1"></i>
+  </button>
+  <button
+    class="btn btn-sm btn-danger ml-3"
+    (click)="auth.setAdmin(false)"
+    *ngIf="auth.isAdmin">
+    Remove Admin <i class="fas fa-lock ml-1"></i>
+  </button>
+</div> -->
