--- a/src/app/components/_nav/footer/footer.component.html
+++ b/src/app/components/_nav/footer/footer.component.html
@@ -1,6 +1,7 @@
 <footer>
   ng-fire-universal
   <a href="https://github.com/jrodl3r/ng-fire-universal" class="github" title="View Source on GitHub">
+    <!-- Credit: http://tholman.com/github-corners -->
     <svg viewBox="0 0 250 250">
       <path class="octo-arm"
         d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3
