--- a/src/app/components/_store/home/home.component.html
+++ b/src/app/components/_store/home/home.component.html
@@ -1,2 +1,8 @@
-<h3>Store » Home</h3>
-<p>[Product Listing]</p>
+<p class="d-flex align-items-center p-3">
+  <span class="badge bg-primary mr-3">TODO</span>
+  Show Category Filters
+</p>
+<p class="d-flex align-items-center pl-3">
+  <span class="badge bg-primary mr-3">TODO</span>
+  List Products
+</p>
