--- a/src/app/components/_user/home/home.component.html
+++ b/src/app/components/_user/home/home.component.html
@@ -1,17 +1,12 @@
-<h3>My Account » Home</h3>
-<p>[Order History + Cart Summary]</p>
-<p>[Solicit User Account Info]</p>
-<!-- <div *ngIf="auth?.user | async as user">
-  <button
-    class="btn btn-sm btn-primary ml-3"
-    (click)="auth.setAdmin(true)"
-    *ngIf="!auth.isAdmin">
-    Make Admin <i class="fas fa-lock ml-1"></i>
-  </button>
-  <button
-    class="btn btn-sm btn-danger ml-3"
-    (click)="auth.setAdmin(false)"
-    *ngIf="auth.isAdmin">
-    Remove Admin <i class="fas fa-lock ml-1"></i>
-  </button>
-</div> -->
+<p class="d-flex align-items-center p-3 pl-md-5">
+  <span class="badge bg-primary mr-3">TODO</span>
+  Show Cart Summary
+</p>
+<p class="d-flex align-items-center pl-3 pb-3 pl-md-5">
+  <span class="badge bg-primary mr-3">TODO</span>
+  Show Recent Order Summary
+</p>
+<p class="d-flex align-items-center pl-3 pb-3 pl-md-5">
+  <span class="badge bg-primary mr-3">TODO</span>
+  Solicit Remaining User Info
+</p>
