--- a/src/app/components/_user/orders/orders.component.html
+++ b/src/app/components/_user/orders/orders.component.html
@@ -1,2 +1,4 @@
-<h3>My Account » Orders</h3>
-<p>[Order History]</p>
+<p class="d-flex align-items-center p-3 pl-md-5">
+  <span class="badge bg-primary mr-3">TODO</span>
+  List Order History Items
+</p>
