--- a/src/app/components/_user/profile/profile.component.html
+++ b/src/app/components/_user/profile/profile.component.html
@@ -1,2 +1,4 @@
-<h3>My Account » Profile</h3>
-<p>[Edit Profile]</p>
+<p class="d-flex align-items-center p-3 pl-md-5">
+  <span class="badge bg-primary mr-3">TODO</span>
+  Setup Profile Form
+</p>
