--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="page">
+<div class="section">
   <div *ngIf="!auth.isLoggedIn() && !(auth.isLoading | async); else isLoggedIn">
     <h2>Login
       <button
