--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
-<div class="wrapper" (click)="nav.collapseHeader()">
+<div class="wrapper" (click)="nav.closeMenu()">
   <div class="container">
-    <router-outlet></router-outlet>
+    <router-outlet #outlet="outlet"></router-outlet>
   </div>
 </div>
 <app-footer></app-footer>
