--- a/src/app/components/_admin/home/home.component.html
+++ b/src/app/components/_admin/home/home.component.html
@@ -1,1 +1,4 @@
-<h4>Admin Home</h4>
+<p class="d-flex align-items-center p-3 pl-md-5">
+  <span class="badge bg-primary mr-3">TODO</span>
+  Setup Dashboard
+</p>
