--- a/src/app/components/_admin/orders/orders.component.html
+++ b/src/app/components/_admin/orders/orders.component.html
@@ -1,1 +1,4 @@
-<p>orders works!</p>
+<p class="d-flex align-items-center p-3 pl-md-5">
+  <span class="badge bg-primary mr-3">TODO</span>
+  Setup Orders
+</p>
