--- a/src/app/components/_cart/cart.component.html
+++ b/src/app/components/_cart/cart.component.html
@@ -1,5 +1,12 @@
-<div class="page">
+<div class="section">
   <h2>My Cart</h2>
   <hr>
-  <p>[Cart Items]</p>
+  <p class="d-flex align-items-center p-3">
+    <span class="badge bg-primary mr-3">TODO</span>
+    List Cart Items
+  </p>
+  <p class="d-flex align-items-center pl-3">
+    <span class="badge bg-primary mr-3">TODO</span>
+    Show Cart Summary
+  </p>
 </div>
