--- a/src/app/components/_nav/header/header.component.scss
+++ b/src/app/components/_nav/header/header.component.scss
@@ -50,6 +50,7 @@ nav {
   user-select: none;
   text-shadow: 0 0 3px rgba(0,0,0, .25);
   transition: 0s;
+  outline: none;
 
   &:after {
     position: absolute;
