--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -1,4 +1,4 @@
-<div class="page mt-md-4 mt-lg-5">
+<div class="section mt-md-4 mt-lg-5">
   <img src="https://ng-fire-universal.s3.amazonaws.com/img/404-error.png">
   <button
     class="btn btn-sm btn-secondary mt-5"
