--- a/src/app/styles/_global.scss
+++ b/src/app/styles/_global.scss
@@ -17,20 +17,61 @@ app-root {
 }
 
 .container {
+  height: 100%;
+
   @media (min-width: $md-screen) { max-width: 760px !important; }
   @media (min-width: $lg-screen) { max-width: 960px !important; }
   @media (min-width: $xl-screen) { max-width: 960px !important; }
 }
 
-.page {
+.section {
   padding: 2rem 0;
+
   @media (min-width: $md-screen) { padding: 3rem 0; }
+
+  &.tabbed {
+    height: 100%;
+
+    & > .content {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      width: 100%;
+      margin-top: 1rem;
+      overflow: hidden;
+
+      .outlet {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        padding-top: 4rem;
+        padding-bottom: 3rem;
+      }
+
+      @media (min-width: $md-screen) {
+        flex-direction: row;
+        margin-top: 0;
+        padding-bottom: 5rem;
+
+        .outlet {
+          padding-top: 2rem;
+          padding-bottom: 4rem;
+        }
+      }
+    }
+
+    hr {
+      display: none;
+
+      @media (min-width: $md-screen) {
+        display: block;
+        margin-bottom: 0;
+      }
+    }
+  }
 }
 
-hr {
-  margin-bottom: 2rem;
-  @media (min-width: $md-screen) { margin-bottom: 3rem; }
-}
+hr { margin-bottom: 2rem; }
 
 ul {
   margin: 0;
