--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,8 +4,9 @@
 
 @import './app/styles/global';
 @import './app/styles/colors';
-@import './app/styles/animation';
-@import './app/styles/notifications';
 @import './app/styles/typography';
+@import './app/styles/forms';
 @import './app/styles/buttons';
 @import './app/styles/modals';
+@import './app/styles/animation';
+@import './app/styles/notifications';
