--- a/src/app/components/_user/profile/edit-avatar/edit-avatar.component.scss
+++ b/src/app/components/_user/profile/edit-avatar/edit-avatar.component.scss
@@ -1,12 +1,84 @@
 @import '../../../../styles/breakpoints';
+@import '../../../../styles/colors';
 
 :host {
+  width: 100%;
   min-width: 180px;
-  padding: 2rem;
-  border-bottom: 1px solid rgba(0,0,0, .1);
+  max-width: 460px;
+  margin: 0 auto;
+  padding: 1rem 0;
 
   @media (min-width: $lg-screen) {
-    border-bottom: 0;
+    padding: 2rem 0 2rem 2rem;
     border-left: 1px solid rgba(0,0,0, .1);
   }
+}
+
+.inner {
+  display: flex;
+  flex-direction: row;
+}
+
+.avatar {
+  position: relative;
+  display: flex;
+  width: 100px;
+  min-width: 100px;
+  height: 100px;
+  min-height: 100px;
+  margin-right: 5px;
+  background: $grey-color;
+  border-radius: 50%;
+  overflow: hidden;
+
+  img { width: 100%; }
+
+  i {
+    position: absolute;
+    top: 16px;
+    left: 50%;
+    color: #FFF;
+    font-size: 85px;
+    opacity: .85;
+    transform: translateX(-50%);
+  }
+}
+
+button { margin: auto 15px; }
+
+@media (min-width: $sm-screen) {
+  .inner { padding: 1rem 0; }
+  button { margin: auto; }
+
+  .avatar {
+    height: 120px;
+    min-height: 120px;
+    width: 120px;
+    min-width: 120px;
+    margin-right: 0;
+
+    i {
+      top: 22px;
+      font-size: 100px;
+    }
+  }
+}
+
+@media (min-width: $lg-screen) {
+  .inner {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .avatar {
+    height: 150px;
+    width: 150px;
+
+    i {
+      top: 15px;
+      font-size: 140px;
+    }
+  }
+
+  button { margin-top: 30px; }
 }
