--- a/src/app/components/_user/profile/profile.component.html
+++ b/src/app/components/_user/profile/profile.component.html
@@ -1,8 +1,9 @@
-<app-edit-avatar></app-edit-avatar>
+<app-edit-avatar [profile]="profile"></app-edit-avatar>
 <form
   *ngIf="profile"
   [formGroup]="profileForm">
-  <label for="fname">First Name *</label>
+  <h3>My Info</h3>
+  <label for="fname">First Name <span class="text-secondary">*</span></label>
   <input required
     type="text"
     id="fname"
@@ -14,7 +15,7 @@
   <div
     class="invalid-label text-danger p-2 pb-3 pl-1"
     *ngIf="formErrors.fname">{{ formErrors.fname }}</div>
-  <label for="lname">Last Name *</label>
+  <label for="lname">Last Name <span class="text-secondary">*</span></label>
   <input required
     type="text"
     id="lname"
@@ -53,6 +54,6 @@
   <button
     type="submit"
     class="btn btn-sm btn-secondary"
-    [disabled]="!isDirty || isUpdating || !profileForm.valid"
+    [disabled]="!isDirty || isUpdating || !profileForm.valid || !platform.isOnline()"
     (click)="updateProfile()">Save</button>
 </form>
