--- a/src/app/components/_user/user.component.html
+++ b/src/app/components/_user/user.component.html
@@ -1,5 +1,5 @@
 <div class="section tabbed">
-  <h2>My Account</h2>
+  <h2>My Account <span>{{ auth.getUserEmail() }}</span></h2>
   <hr>
   <div class="content">
     <app-tabs [tabs]="tabs"></app-tabs>
