--- a/src/app/components/loading/loading.component.scss
+++ b/src/app/components/loading/loading.component.scss
@@ -11,7 +11,7 @@
   width: 100%;
   height: 100%;
   background: $warm-color;
-  transition: height 0s .25s, width 0s .25s, opacity .25s .25s;
+  transition: 0s;
   overflow: hidden;
 
   &.disabled {
@@ -29,7 +29,7 @@
     width: 300px;
     height: 300px;
     opacity: 0;
-    animation: fade-in .25s forwards ease-in;
+    animation: fade-in .25s .35s forwards ease-in;
     user-select: none;
 
     @keyframes fade-in {
