--- a/src/app/styles/_typography.scss
+++ b/src/app/styles/_typography.scss
@@ -1,5 +1,6 @@
-@import 'breakpoints';
 @import url('https://fonts.googleapis.com/css?family=Lobster|Roboto:400,500,700,900');
+@import 'breakpoints';
+@import 'colors';
 
 $font-logo: 'Lobster', cursive;
 $font-primary: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -34,4 +35,12 @@ h2 {
   @media (min-width: $lg-screen) {
     font-size: 3rem;
   }
+}
+
+h3 {
+  margin-bottom: 1.75rem;
+  padding-bottom: .75rem;
+  color: $grey-color;
+  font-size: 1.5rem;
+  border-bottom: 1px solid rgba(0,0,0, .05);
 }
