--- a/src/app/components/_user/home/home.component.html
+++ b/src/app/components/_user/home/home.component.html
@@ -1,3 +1,7 @@
+<p class="p-3 pl-md-5">
+  Welcome back, {{ auth.getUserName() }}.
+  Your email is <strong>{{ auth.getUserEmail() }}</strong>.
+</p>
 <p class="d-flex align-items-center p-3 pl-md-5">
   <span class="badge bg-primary mr-3">TODO</span>
   Show Cart Summary
